k8s/postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-primary
  namespace: demo-app
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
    role: primary
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: demo-app
spec:
  serviceName: "postgres-primary"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        role: primary
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
