k8s/shop-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-app
  namespace: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shop-app
  template:
    metadata:
      labels:
        app: shop-app
    spec:
      containers:
        - name: shop-app
          image: dockersl1984/shop-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: shop-app-service
  namespace: demo-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: shop-app
